--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-10  Brad Cavanagh <b.cavanagh@jach.hawaii.edu>
+
+        * Makefile.PL: Update dependencies.
+
 2005-01-27  Brad Cavanagh <b.cavanagh@jach.hawaii.edu>
 
-	* Astrom.pm: Initial addition.
+        * Astrom.pm: Initial addition.
