--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-08  Brad Cavanagh <b.cavanagh@jach.hawaii.edu>
+
+        * Astrom.pm: Change licence to GPL.
+
 2005-02-10  Brad Cavanagh <b.cavanagh@jach.hawaii.edu>
 
         * Makefile.PL: Update dependencies.
