--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-23  Brad Cavanagh <b.cavanagh@jach.hawaii.edu>
+
+        * Astrom.pm: Modify method of looking for ASTROM binary to use
+          Starlink::Config.
+
 2005-03-08  Brad Cavanagh <b.cavanagh@jach.hawaii.edu>
 
         * Astrom.pm: Change licence to GPL.
